<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle"
            android:id="@+id/switch_checkbox_action_page"
            android:text="@string/tile_switch_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="@string/tile_first_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="1"
                android:id="@+id/first_click_edittext_action_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle"
            android:id="@+id/layout_second_click_action_page"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:text="@string/tile_second_click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="1"
                android:id="@+id/second_click_edittext_action_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>