<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_rectangle"
            android:id="@+id/layout_background_color_page"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/tile_color" />

            <net.arkellyga.arduinolistener.ui.ColorSquare
                android:id="@+id/color_background_color_page"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_rectangle"
            android:id="@+id/layout_border_color_page"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/tile_border_color" />

            <net.arkellyga.arduinolistener.ui.ColorSquare
                android:id="@+id/color_border_color_page"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/tile_border_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_weight="1"
                android:src="@android:drawable/ic_media_previous"
                android:id="@+id/fast_back_button_border_size_color_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageButton
                android:layout_weight="1"
                android:src="@android:drawable/ic_media_rew"
                android:id="@+id/back_button_border_size_color_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="1"
                android:id="@+id/border_size_edittext_color_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageButton
                android:layout_weight="1"
                android:src="@android:drawable/ic_media_ff"
                android:id="@+id/forward_button_border_size_color_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageButton
                android:layout_weight="1"
                android:src="@android:drawable/ic_media_next"
                android:id="@+id/fast_forward_button_border_size_color_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_rectangle"
            android:id="@+id/layout_text_color_color_page"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/tile_text_color" />

            <net.arkellyga.arduinolistener.ui.ColorSquare
                android:id="@+id/color_text_color_page"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>